server/public/styles.css
* {
  margin: 0;
  max-width: 100%;
  box-sizing: border-box;
}

body {
  margin: 0;
  background-color: #ebf0f6;
}

.header {
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'Spectral', serif;
  background-color: #364e68;
  color: white;
  height: 60px;
}

.header-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-anchor {
  margin: 0 0 0 0.7rem;
  color: white;
  font-size: 1.2rem;
  transition: color 0.3s;
}

.home-buttons {
  display: flex;
  flex-direction: column;
}

.background-map {
  position: absolute;
  top: 60px;
  bottom: 0;
  left: 0;
  right: 0;
}

.button {
  background-color: #364e68;
  color: white;
  font-size: 1.5rem;
  border: none;
  border-radius: 0.4rem;
}

.main {
  font-family: 'Rubik', serif;
  position: relative;
  width: 375px;
  height: calc(100vh - 170px);
  display: flex;
  align-items: center;
  justify-content: center;
}

.create {
  border-radius: 0.4rem;
  padding: 1.5rem;
  margin: 1rem 0;
}

.add {
  position: fixed;
  bottom: 70px;
  width: 365px;
  left: 5px;
  padding: 1rem 0.5rem;
}

.save {
  position: absolute;
  width: 80px;
  padding: 5px 5px;
  font-size: 1.1rem;
  top: 20px;
  right: 20px;
}

.edit-button {
  position: absolute;
  width: 35px;
  text-align: center;
  height: 35px;
  right: 4%;
  background-color: white;
  color: #364e68;
  padding: 5px 6px;
  font-size: 1.2rem;
  border-radius: 0.4rem;
  top: 22%;
  border: solid white 0.15rem;
  transition: background-color 0.3s;
}

.edit-button:hover {
  background-color: #364e68;
  color: white;
  cursor: pointer;
}

.loader {
  margin: auto;
  border: 15px solid white;
  border-top: 15px solid #364e68;
  border-radius: 50%;
  width: 150px;
  height: 150px;
  animation: spin 1.5s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.finish {
  position: fixed;
  bottom: 70px;
  left: 0.3rem;
  width: 365px;
  padding: 1rem 2rem;
  -webkit-appearance: none;
}

.name {
  font-size: 1.5rem;
  text-align: center;
  background-color: #364e68;
  color: white;
  border: none;
  border-radius: 0.4rem;
  position: absolute;
  top: 0.3rem;
  left: 0.3rem;
  width: 365px;
  padding: 1rem 2rem;
}

::placeholder {
  color: rgba(255, 255, 255, 1);
}

.added {
  background-color: white;
  color: #364e68;
}

ul {
  padding-left: 0;
}

.trip-list {
  position: absolute;
  top: 75px;
  left: 5px;
  width: 365px;
  padding-bottom: 60px;
}

.trip-list-item,
.location-text,
.search {
  font-family: 'Rubik', serif;
  color: #364e68;
  background-color: white;
  border: solid 0.15rem #364e68;
  border-radius: 0.4rem;
  list-style-type: none;
  padding: 0.7rem 15px;
  margin-bottom: 10px;
  position: relative;
}

.center {
  text-align: center;
}

.list-arrow {
  position: absolute;
  right: 10px;
  top: 25px;
  font-size: 1.5rem;
}

.trip-list-arrow {
  position: absolute;
  right: 10px;
  top: 19px;
  font-size: 1.5rem;
}

.location-page {
  position: relative;
  padding: 10px;
  margin-bottom: 60px;
}

.locations {
  top: 8px;
}

.back-arrow {
  position: absolute;
  left: 10px;
  top: 13.5px;
  font-size: 2rem;
}

.location {
  position: absolute;
  left: 10px;
  top: 9px;
  font-size: 2rem;
}

.icons {
  margin-top: 10px;
  display: flex;
  justify-content: space-between;
  width: 32px;
  align-items: center;
}

.poi-list-container {
  max-height: 260px;
  background-color: white;
  border: solid 0.15rem #364e68;
  border-radius: 0.4rem;
  padding-bottom: 5px;
}

.poi-list {
  font-family: 'Rubik', serif;
  max-height: 230px;
  height: auto;
  margin: auto;
  margin-bottom: 7px;
  position: relative;
  overflow: hidden;
  overflow-y: scroll;
}

.poi-list li:not(:last-child) {
  margin-bottom: 5px;
  border-bottom: solid thin lightgray;
}

.poi-list-item {
  color: #364e68;
  display: flex;
  padding: 10px 10px 15px;
  position: relative;
}

.poi-img {
  width: 100px;
  height: 100px;
  border-radius: 0.4rem;
  margin-right: 10px;
}

.poi-form {
  position: relative;
  padding: 10px 0;
  display: flex;
}

.search {
  position: relative;
  width: 70%;
  font-size: 1rem;
  margin-bottom: 0;
  border-radius: 0.4rem 0 0 0.4rem;
  outline: none;
}

.explore {
  width: 20%;
  font-size: 1rem;
  margin-left: 5px;
}

.search::placeholder {
  color: #364e68;
}

.poi-search {
  -webkit-appearance: none;
  border-radius: 0 0.3rem 0.3rem 0;
  border: solid 0.15rem #364e68;
  border-left: none;
  background-color: #364e68;
  color: white;
  transition: background-color 0.3s;
  margin-left: -0.5px;
  width: 11%;
  font-size: 1rem;
}

.results {
  max-height: 520px;
  margin: auto;
  padding: 0 0 10px;
  position: relative;
  overflow: hidden;
  overflow-y: scroll;
}

.add-poi,
.delete {
  position: absolute;
  right: 5px;
  top: 42px;
  width: 35px;
  height: 35px;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: background-color 0.3s;
}

.delete-module {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: white;
  padding: 5px 10px 0;
  border-radius: 0.25rem;
  display: flex;
  flex-direction: column;
}

.delete {
  font-size: 1.2rem;
}

.delete-itinerary {
  right: 10px;
  top: 13px;
}

.delete-poi,
.cancel {
  font-size: 1rem;
  margin: 5px 10px 0 0;
  padding: 2px 8px;
  border: 0.1rem solid #364e68;
  transition: background-color 0.3s;
}

.delete:hover,
.delete-poi:hover {
  background-color: rgb(185, 24, 24);
  border-color: rgb(185, 24, 24);
}

.cancel:hover {
  background-color: white;
  color: #364e68;
}

.list-item-content {
  padding-right: 35px;
}

.add-poi-text {
  width: 90%;
}

.foursquare-logo {
  width: 200px;
  margin-left: 10px;
}

.fs-logo {
  width: 35px;
  position: absolute;
  right: 5px;
  top: 5px;
  border-radius: 0.3rem;
  transition: opacity 0.3s;
}

.add-page {
  margin-left: 14px;
  margin-bottom: 5px;
}

.no-results {
  margin-top: 10px;
  padding: 1rem 20px;
}
/* ... */

